--- a/SpringBoot-Blog-master/pom.xml
+++ b/SpringBoot-Blog-master/pom.xml
@@ -149,6 +149,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.baidu.aip</groupId>
+            <artifactId>java-sdk</artifactId>
+            <version>4.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
